# projo

./: .gitignore  README.md  db.sqlite3  diagram.puml  pyproject.toml
apps/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/accounts/: delete.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  profile.html  register.html  user_confirm_delete.html
apps/accounts/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
apps/api/: admin.py  apps.py  authentication.py  middleware.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/comments/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/comments/migrations/: 0001_initial.py
apps/comments/templates/comments/: comment_form.html  comment_form_modal.html  delete_comment_modal.html
apps/comments/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
apps/core/: constants.py  context_processors.py  logging.py  middleware.py  template_backend.py  views.py
apps/core/management/commands/: delete_migrations.py  load_fake_data.py
apps/core/static/core/js/: modal_utils.js
apps/core/templatetags/: check_user_authorized.py  messages_filters.py  role_filters.py  status_filters.py  tasks_status_filters.py
apps/core/tests/: fixtures.py  helpers.py
apps/dashboard/: apps.py  views.py
apps/dashboard/templates/dashboard/: dashboard.html
apps/notifications/: admin.py  apps.py  consumers.py  models.py  routing.py  signals.py  urls.py  utils.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/notifications/templates/notifications/: list.html
apps/notifications/templates/notifications/partials/: delete_all_confirm_modal.html  mark_all_confirm_modal.html
apps/notifications/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
apps/projects/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py
apps/projects/templates/projects/: detail.html  list.html  project_form.html  project_members_form.html
apps/projects/templatetags/: project_filters.py  project_members_role.py
apps/projects/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
apps/tasks/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py
apps/tasks/templates/tasks/: detail.html  task_form.html
apps/tasks/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
core/: asgi.py  settings.py  urls.py
static/css/: messages.css
static/js/: main.js
staticfiles/core/js/: modal_utils.js
staticfiles/js/: messages.js  sw.js
templates/: base.html  index.html
templates/errors/: 400.html  403.html  404.html  500.html  error_base.html
templates/partials/: footer.html  header.html  messages.html  notifications.html
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/templates/: base.html
(+6 files in other folders)
